# pi-tui-custom

./: .gitignore  Cargo.toml  package-lock.json  package.json  run-pi.cmd  run-pi.ps1
bash-store/: bash-store.mjs
crates/pi-core-native/: Cargo.toml
crates/pi-core-native/src/: lib.rs
crates/pi-shell-executor/: Cargo.toml
crates/pi-shell-executor/src/: main.rs
crates/pi-shell-executor/tests/: sidecar.rs
docs/: RUST_OPTIMIZATION_NEXT_PHASE_PLAN.md  RUST_REFACTOR_MASTER_PLAN.md  RUST_REWRITE_PREP.md  module-boundaries.json
event-state-runtime/: README.md  agent-effects.mjs  compaction-effects.mjs  effect-result.mjs  event-action-planner.mjs  event-adapter.mjs  factory.mjs  index.mjs  interactive-host-contract.mjs  interactive-host-effects.mjs  interface.mjs  message-effects.mjs  message-lifecycle.mjs  retry-effects.mjs
interactive-mode-support/: command-controller-adapter.mjs  custom-editor-adapter.mjs  expandable-text.mjs  extension-runtime-adapter.mjs  extension-ui-adapter.mjs  extension-widgets-adapter.mjs  input-controller-adapter.mjs  input-controller-contract.mjs  interactive-wrapper-registry.mjs  lifecycle-runtime-adapter.mjs  mode-state-controller-adapter.mjs  path-formatters.mjs  process-lifecycle-adapter.mjs  queue-interaction-adapter.mjs  selector-controller-adapter.mjs  session-navigation-adapter.mjs  stream-controller-contract.mjs  stream-runtime-adapter.mjs  stream-smoothing-policy.mjs  tool-status-controller-contract.mjs
notice-store/: factory.mjs  index.mjs
patch-engine/: frame-input-adapter.mjs  frame-runtime.mjs  index.mjs  interface.mjs  rust-patch-core.mjs
queue-store/: factory.mjs  interface.mjs  queue-store.mjs
runtime-host-adapter/: README.md  host-access.mjs  (+1 more)
(+211 files in other folders)
