[workspace]
resolver = "3"
members = [
    "crates/pi-patch-engine",
    "crates/pi-event-core",
    "crates/pi-queue-core",
    "crates/pi-search-core",
    "crates/pi-shell-executor",
    "crates/pi-transcript-core",
    "crates/pi-ui-core",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "ISC"
