[package]
name = "pi-core-native"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.4.0", default-features = false, features = ["napi4"] }
napi-derive = "3.3.0"
pi-event-core = { path = "../pi-event-core" }
pi-patch-engine = { path = "../pi-patch-engine" }
pi-queue-core = { path = "../pi-queue-core" }
pi-search-core = { path = "../pi-search-core" }
pi-transcript-core = { path = "../pi-transcript-core" }
pi-ui-core = { path = "../pi-ui-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
napi-build = "2.2.3"
