[package]
name = "pi-shell-executor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
